--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 }
 
 img{
-    max-width: 100px;
+    max-width: 300px;
 }
 
 .container {
@@ -96,7 +96,7 @@ img{
 }
 
 .header-txt span {
-    color: #FF5A2C;
+    color: #ff0000;
 }
 
 .header-txt p {
@@ -112,15 +112,15 @@ img{
 .btn-1, .btn-2, .btn-3{
     display: inline-block;
     padding: 11px 35px;
-    border: 2px solid #FF5A2C;
+    border: 2px solid #ff0000;
     border-radius: 25px;
     margin-right: 25px;
-    font-size: 17px;
+    font-size: 25px;
     color: #FFFFFF;
 }
 
 .btn-1 :hover {
-    background-color: #FF5A2C;
+    background-color: #ff0000;
 }
 
 .popular {
@@ -129,7 +129,7 @@ img{
 }
 
 h2 {
-    color: #FFFFFF;
+    color: #ffffff;
     font-size: 35px;
     margin-bottom: 45px;
 }
@@ -141,7 +141,7 @@ h2 {
 }
 
 .popular-content img {
-    width: 150px;
+    width: 160px;
 }
 
 .product-content {
@@ -174,12 +174,12 @@ h3 {
 
 .price p {
     font-size: 17px;
-    color: #FF5A2C;
+    color: #ff0000;
 }
 
 .btn-2 {
     padding: 5px 25px;
-    background-color: #FF5A2C;
+    background-color: #ff0000;
     margin-right: 0;
 }
 
@@ -218,7 +218,7 @@ input {
 }
 
 .btn-3 {
-    background-color: #FF5A2C;
+    background-color: #ff0000;
     cursor: pointer;
     margin-right: 0;
 }
